# Ecliptix-Web-Server

./: .editorconfig  .env.example  .gitignore  AOT-README.md  CIPHER_PAYLOAD_REFACTOR_PLAN.md  DEPLOYMENT_WINDOWS_DOCKER.md  Dockerfile.linux  Dockerfile.prebuilt  Dockerfile.simple  Dockerfile.windows  Ecliptix.sln  Jenkinsfile  OPAQUE_RFC9807_Implementation_Session.md  PERFORMANCE_AUDIT_FINDINGS.md  Security.txt  build-windows-container.ps1  build-windows-docker.sh  cleanup_database.sql  clear_protocol_state.sql  compose.yaml  docker-compose.dev.yml  docker-compose.windows.yml  docker-compose.yml  start-redis.sh  test-redis.sh  update_headers.sh  update_rate_limit.sql
.github/workflows/: main_ecliptixmembeships.yml  publish.yml
Benchmarks/: Benchmarks.csproj  CipherPayloadBenchmarks.cs  MinimalProtocolBenchmarks.cs  Program.cs  ShieldProProtocolBenchmarks.cs  SodiumSecureMemoryHandleBenchmarks.cs  StateSerialization Benchmarks.cs
Ecliptix.Core/: ActorIds.cs  ActorRegistry.cs  AotActorRegistry.cs  Dockerfile  Ecliptix.Core.csproj  Ecliptix.Core.http  IEcliptixActorRegistry.cs  Program.cs  akka.conf  appsettings.Production.json  appsettings.Security.json  appsettings.json  docker-compose.yml  header  rd.xml  server_private.pem
Ecliptix.Core/Actors/: EcliptixProtocolConnectActor.cs  EcliptixProtocolConnectionsManagerActor.cs  EcliptixProtocolConnectsManagerActor.cs  EcliptixProtocolSystemActor.cs
Ecliptix.Core/AuthenticationSystem/: AkeServerState.cs  ClientPasswordAuthSystem.cs  OpaqueCrypto.cs  ServerPasswordAuthSystem.cs
Ecliptix.Core/Configuration/: ApplicationConstants.cs  MetadataConstants.cs  NetworkConfiguration.cs  NetworkConstants.cs  SecurityConstants.cs  SecurityKeysSettings.cs  ThrottlingConstants.cs
Ecliptix.Core/Infrastructure/: DbMigrator.cs
Ecliptix.Core/Interceptors/: FailureHandlingInterceptor.cs  RequestMetaDataInterceptor.cs  SecurityInterceptor.cs  SessionKeepAliveInterceptor.cs  ThreadCultureInterceptor.cs
Ecliptix.Core/Json/: AppJsonSerializerContext.cs
Ecliptix.Core/Middleware/: IpThrottlingMiddleware.cs  SecurityMiddleware.cs
Ecliptix.Core/Observability/: EcliptixActivitySource.cs
Ecliptix.Core/OpaqueProtocol/: AkeServerState.cs  ClientPasswordAuthSystem.cs  MockUserRepository.cs  OpaqueCryptoFailureType.cs  OpaqueCryptoUtilities.cs  OpaqueFailure.cs  ServerPasswordAuthSystem.cs
Ecliptix.Core/Properties/: launchSettings.json
Ecliptix.Core/Protocol/: AdaptiveRatchetManager.cs  AesGCMService.cs  CipherPayloadHandler.cs  CircuitBreaker.cs  ConnectSession.cs  Constants.cs  DhValidator.cs  EcliptixMessageKey.cs  EcliptixProtocol.cs  EcliptixProtocolChainStep.cs  EcliptixProtocolConnection.cs  EcliptixProtocolSystem.cs  EcliptixSystemIdentityKeys.cs  HashAlgorithmType.cs  HkdfSha256.cs  ICipherPayloadHandler.cs  IDataCenterPubKeyExchange.cs  IInboundMessageService.cs  IOutboundMessageService.cs  LocalKeyMaterial.cs  OneTimePreKeyLocal.cs  PerformanceProfiler.cs  ProtocolChainStepException.cs  ProtocolMetricsCollector.cs  PublicKeyBundle.cs  RatchetConfig.cs  RatchetRecovery.cs  ReplayProtection.cs  Result.cs  SecureByteStringInterop.cs  SecureMemory.cs  SessionHolder.cs  ShieldChainStep.cs  ShieldFailure.cs  ShieldMessageKey.cs  ShieldPro.cs  ShieldSession.cs  ShieldSessionManager.cs  SodiumInterop.cs  SodiumSecureMemoryHandle.cs  (+1 more)
Ecliptix.Core/Resources/: VerificationFlowLocalizer.cs  VerificationFlowRes.Designer.cs  VerificationFlowRes.en-us.resx  VerificationFlowRes.resx  VerificationFlowRes.uk-ua.resx  VerificationFlowResource.Designer.cs  VerificationFlowResource.en-US.Designer.cs  VerificationFlowResource.en-US.resx  VerificationFlowResource.resx  VerificationFlowResource.uk-UA.Designer.cs  VerificationFlowResource.uk-UA.resx
Ecliptix.Core/Services/: ActorSystemInitializationHost.cs  (+7 more)
Ecliptix.Domain/: Class1.cs  DbInterfaces.cs  DbWrappers.cs  Ecliptix.Domain.csproj  ILocalizationProvider.cs
Ecliptix.Protobufs/: Ecliptix.Protobufs.csproj
Ecliptix.Protocol.Exchange/: Class1.cs  Ecliptix.Protocol.Exchange.csproj
Ecliptix.Security.Certificate.Pinning/: Ecliptix.Security.Certificate.Pinning.csproj
Ecliptix.Security.KeyDerivation/: Ecliptix.Security.KeyDerivation.csproj  HardenedKeyDerivation.cs  IHardenedKeyDerivation.cs  ISecretSharingService.cs  KeySplitResult.cs  MasterKeyDerivation.cs  ShamirSecretSharing.cs
Ecliptix.Security.Opaque/: Ecliptix.Security.Opaque.csproj  ServiceCollectionExtensions.cs  libopaque_server.dylib
Ecliptix.Security.SSL.Native/: Ecliptix.Security.SSL.Native.csproj  README.md  libecliptix.server.dylib  libecliptix_server_security.dylib
Ecliptix.Tests/: DatabaseFixture.cs  Ecliptix.Tests.csproj  TestDatabase.cs
Ecliptix.Utilities/: Constants.cs  CryptoHelpers.cs  Ecliptix.Utilities.csproj  EcliptixProtocolFailure.cs  EcliptixProtocolFailureType.cs  ErrorI18nKeys.cs  FailureBase.cs  GrpcFailureException.cs  Helpers.cs  MetaDataSystemFailure.cs  MetaDataSystemFailureType.cs  Option.cs  ProtocolMessages.cs  Result.cs  ResultExtensions.cs  SharedConstants.cs  SodiumInterop.cs  SodiumSecureMemoryHandle.cs  Unit.cs
EcliptixServerSecurity/: CMakeLists.txt  test_server_api  test_server_api.cpp
EcliptixServerSecurity/include/ecliptix/: server_security.h
EcliptixServerSecurity/include/internal/: openssl_wrapper.hpp  sodium_wrapper.hpp
EcliptixServerSecurity/src/: openssl_wrapper.cpp  server_security.cpp
ProtocolTests/: AesGcmServiceTests.cs  EcliptixPasswordAuthSystemTests.cs  EcliptixProtocolConnectActorPersistenceTests.cs  EcliptixProtocolSystemTests.cs  LocalKeyMaterialX3dhTests.cs  MemberShipPersistorActorTests.cs  ProtocolTests.csproj  ShieldChainStepTests.cs  ShieldProTests.cs
Scripts/: deploy_infrastructure.sh  run-aot.bat
ShieldProTests/: AesGcmServiceTests.cs  ShieldChainStepTests.cs  ShieldProDoubleRatchetTests.cs  ShieldProPowerTests.cs  ShieldProTests.csproj  ShieldProtests.cs  UnitTest1.cs  X3dhKeyAgreementTests.cs
docker-publish/: Ecliptix.Core  Ecliptix.Core.deps.json  Ecliptix.Core.runtimeconfig.json  appsettings.json
server-keys/: ecliptix_server_private.pem
(+834 files in other folders)
